Initial working AI chat widget backend

--- a/test.html
+++ b/test.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Testing Chat Widget</h1>
 
-    <script src="http://127.0.0.1:3001/widget.js" data-client-id="demo"></script>
+    <script src="https://ai-chat-backend-n3wi.onrender.com/widget.js" data-client-id="demo" async></script>
   </body>
 </html>
