--- a/test.html
+++ b/test.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Testing Chat Widget</h1>
 
-    <script src="https://ai-chat-backend-n3wi.onrender.com/widget.js" data-client-id="demo" async></script>
+    <script src="https://ai-chat-backend-n3wi.onrender.com/widget.js" data-client-id="acme" async></script>
   </body>
 </html>
